testdata/error/divide_by_zero_rate.ledger
; Posting with divide by zero rate.

2024/09/01 Shop
    Expenses                                      10 CHF @ (1 / 0 JPY)
    Assets:Banks
